--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,8 @@
     ~/.config/polybar/launch.sh:        config/polybar/launch.sh
     ~/.config/polybar/mpris.sh:         config/polybar/mpris.sh
     ~/Pictures/Wallpapers:              Pictures/Wallpapers
+    ~/.zshrc:                           zshrc
+    ~/.oh-my-zsh:                       oh-my-zsh
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
