--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,9 +1,9 @@
 ;=====================================================
 ;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/jaagr/polybar
 ;
-;
-;
-;
+;   The README contains alot of information
 ;
 ;=====================================================
 
@@ -12,29 +12,9 @@ mainBlue = #262f33
 mainLightBlue = #96B5B4
 mainSelectBlue = #44545b
 
-[bar/right]
-monitor = HDMI-0
+[bar/bar]
+monitor = ${env:MONITOR}
 wm-name = right
-bottom = true
-override-redirect = true
-wm-restack = bspwm
-height = 18
-underline-size = 2
-background = ${colors.mainBlue}
-foreground = #a0b6b3
-underline = #96B5B4
-locale = en_US.UTF-8
-module-margin-left = 1
-fixed-center = true
-font-0 = "xft:Hack:antialias=false:pixelsize=8.5;0"
-font-1 = "FontAwesome:size=8.5;0"
-border-top-size = 2
-border-top-color = ${colors.mainLightBlue}
-modules-center = bspwm music cpu clock
-
-[bar/left]
-monitor = DVI-I-1
-wm-name = left
 bottom = true
 override-redirect = true
 wm-restack = bspwm
