--- a/config/polybar/config
+++ b/config/polybar/config
@@ -12,39 +12,43 @@ mainBlue = #262f33
 mainLightBlue = #96B5B4
 mainSelectBlue = #44545b
 
+;=====================================================
+
 [bar/left]
-monitor = HDMI-0
+monitor = HDMI-1
 bottom = true
 height = 18
 underline-size = 2
 background = ${colors.mainBlue}
 foreground = #a0b6b3
 underline = #96B5B4
-locale = en_US.UTF-8
+locale = en_GB.UTF-8
 module-margin-left = 1
 fixed-center = true
 font-0 = "xft:Hack:antialias=false:pixelsize=8.5;0"
 font-1 = "FontAwesome:size=8.5;0"
 border-top-size = 2
 border-top-color = ${colors.mainLightBlue}
-modules-center = bspwm music cpu clock
+modules-center = bspwm music cpu date
 
 [bar/right]
-monitor = DP-1
+monitor = DP-2
 bottom = true
 height = 18
 underline-size = 2
 background = ${colors.mainBlue}
 foreground = #a0b6b3
 underline = #96B5B4
-locale = en_US.UTF-8
+locale = en_GB.UTF-8
 module-margin-left = 1
 fixed-center = true
 font-0 = "xft:Hack:antialias=false:pixelsize=8.5;0"
 font-1 = "FontAwesome:size=8.5;0"
 border-top-size = 2
 border-top-color = ${colors.mainLightBlue}
-modules-center = bspwm music cpu clock
+modules-center = bspwm music cpu date
+
+;=====================================================
 
 [module/bspwm]
 type = internal/bspwm
@@ -88,9 +92,15 @@ format-underline = ${colors.mainLightBlue}
 format-padding = 2
 label = "MEM: %gb_used%"
 
-[module/clock]
+[module/date]
 type = internal/date
-date = %d-%m-%Y %H:%M:%S
-format-background = ${colors.mainBlue}
-format-underline = ${colors.mainLightBlue}
-format-padding = 2
+interval = 1.0
+
+date = "%Y-%M-%d"
+
+time-alt = %a %d %b
+time     = %a %H:%M
+
+label             = %time%
+format            = "<label>"
+format-padding    = 2
